# MiNOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/examples_demo/: CMakeLists.txt  README.md  examples_demo.cpp  examples_demo.hpp
components/mn_cfg/: CMakeLists.txt  MnConfig.cpp  MnConfig.hpp
components/mn_ota/: CMakeLists.txt  MnOta.cpp  MnOta.hpp
components/mn_sysinfo/: CMakeLists.txt  Kconfig  MnSysInfo.c  MnSysInfo.h
components/mn_time/: CMakeLists.txt  MnTime.cpp  MnTime.hpp
components/mn_web/: CMakeLists.txt  Kconfig  MnWeb.cpp  MnWeb.hpp  htmlCode.h
components/mn_web/certs/: README.md  ca.cnf.default  server.cnf.defaults  server_ext.cnf.defaults
components/mn_wifi/: CMakeLists.txt  MnWiFi.cpp  MnWiFi.hpp
main/: CMakeLists.txt  app_main.cpp
